--- a/grow_build_server/templates/base.html
+++ b/grow_build_server/templates/base.html
@@ -11,7 +11,7 @@
   html,
   body {
     -webkit-font-smoothing: antialiased;
-    background: #ddd;
+    background: red;
     font-family: 'Roboto', 'arial', 'helvetica neue', sans-serif;
     padding: 30px;
   }
